# kappa

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/buffer/: mod.rs
src/core/: mod.rs
src/core/buffer/: mod.rs  operations.rs  rope_buffer.rs
src/core/cursor/: mod.rs  movement.rs  position.rs
src/core/document/: document.rs  file_io.rs  mod.rs
src/core/viewport/: mod.rs  scroll.rs
src/editor/: cursor.rs  mod.rs  mode.rs
src/features/: mod.rs
src/features/command_palette/: commands.rs  filter.rs  mod.rs
src/features/editing/: clipboard.rs  delete.rs  insert.rs  mod.rs
src/features/file_operations/: mod.rs  open.rs  save.rs  save_as.rs
src/features/navigation/: goto.rs  mod.rs  search.rs
src/input/: events.rs  handlers.rs  keybindings.rs  mod.rs
src/input/handlers/: command_palette.rs  dialog.rs  mod.rs  normal.rs
src/state/: editor_state.rs  message.rs  mod.rs  mode.rs
src/ui/: mod.rs  renderer.rs  theme.rs
src/ui/components/: dialogs.rs  editor_view.rs  line_numbers.rs  message_bar.rs  mod.rs  status_bar.rs
src/ui/components/dialogs/: command_palette.rs  confirmation.rs  input_dialog.rs  mod.rs
src/ui/layout/: mod.rs  split.rs
src/utils/: mod.rs  string_ext.rs
