[package]
name = "kappa"
version = "0.1.0"
edition = "2024"
description = "A modern, efficient terminal text editor written in Rust"
authors = ["Fernando Duarte <ferchd@outlook.com>"]
license = "MIT"
repository = "https://github.com/ferchd/kappa.git"
keywords = ["editor", "terminal", "kappa", "text", "text-editor"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
ropey = "1.6"
unicode-width = "0.2.0"

[dev-dependencies]

[[bin]]
name = "kappa"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]